# rusty-todos

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
.github/workflows/: deploy.yml
migrations/: 0001_create_todos_table.sql
src/: handlers.rs  main.rs  migrations.rs  models.rs  state.rs
src/auth/: auth_user_extractor.rs  handlers.rs  mod.rs  models.rs
src/errors/: internal_errors.rs  mod.rs
src/todos/: handlers.rs  models.rs
templates/: index.html  todo-item.html
templates/auth/: login.html  register.html
