[package]
name = "todos-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
askama_axum = "0.3.0"
axum = "0.6.20"
serde = { version = "1.0.192", features = ["derive"] }
shuttle-axum = "0.32.0"
shuttle-runtime = "0.32.0"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
